--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes glare {
+  0% {
+    transform: translateX(-100%) skewX(-20deg);
+  }
+  20% {
+    transform: translateX(200%) skewX(-20deg);
+  }
+  100% {
+    transform: translateX(200%) skewX(-20deg);
+  }
+}
+
 :root {
   font-family: Helvetica, Arial, sans-serif;
   line-height: 1.5;
